--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/pro-regular-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "babel-plugin-styled-components": "^1.10.1",
     "bulma": "^0.7.2",
     "gatsby": "^2.3.15",
     "gatsby-image": "^2.0.25",
@@ -17,6 +18,7 @@
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-contentful": "^2.0.32",
     "gatsby-source-filesystem": "^2.0.22",
     "gatsby-transformer-remark": "^2.2.6",
@@ -29,7 +31,7 @@
     "react-reveal": "^1.2.2",
     "react-typed": "^1.1.2",
     "smooth-scroll": "^15.0.0",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.3.1"
   },
   "keywords": [
     "gatsby"
