--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/pro-regular-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@fullpage/react-fullpage": "^0.1.15",
     "babel-plugin-styled-components": "^1.10.1",
     "bulma": "^0.7.2",
     "gatsby": "^2.3.15",
@@ -29,6 +30,7 @@
     "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0",
     "react-reveal": "^1.2.2",
+    "react-svg": "^10.0.17",
     "react-typed": "^1.1.2",
     "smooth-scroll": "^15.0.0",
     "styled-components": "^4.3.1"
